Fix scrollbar width for older browsers

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -158,6 +158,11 @@ html * {
     padding: 16px;
 }
 
+#left_panel:-webkit-scrollbar {
+    background: transparent;
+    width: 0px;
+}
+
 #player_area {
     width: 100%;
     height: 715px;
